== In Git

=== Changed Features
* The Scala step definition DSL has moved from cuke4duke.scala.Dsl to cuke4duke.ScalaDsl. (Jon-Anders Teigen)
* Java step definitions are now Locale-aware. Transformed Java primitives will use the Locale identified by 
  the Annotation's language. For example a step definition annotated with @cuke4duke.annotation.I18n.NO.Gitt
  and a method taking a double, will have the double transformed based on the NO Locale. (Aslak Hellesøy)

== 0.2.4 2010-03-01

The big news in this release is support for all of Cucumber's 40 I18n languages in Java annotations and Scala traits.
This means that you no longer need to mix English and your native language. It also means that snippets in non-English
will actually compile.

=== New Features
* I18n support for all of Cucumber's 40 i18n languages. (Java annotations only). (#28 Aslak Hellesøy)
* Added embed, ask and announce methods to the Steps class. Makes it easier to output custom info and interact with users. (Aslak Hellesøy)
* Added Table.mapColumn and Table.mapHeaders. (#60 Yves Senn, Aslak Hellesøy)

=== Changed Features
* @Given, @When, @Then annotations have moved to inner classes of cuke4duke.annotation.I18n.[EN|FR|NO etc]. (Aslak Hellesøy)
* @Before, @After, @Transform and @Order annotations have moved to the cuke4duke.annotation package (Aslak Hellesøy)
* ScalaDsl and Languages have moved to cuke4duke.scala.Dsl and cuke4duke.scala.I18n (Aslak Hellesøy)
* Scala step definitions must explicitly specify i18n language. Ex: extends ScalaDsl with EN. (Aslak Hellesøy)
* Upgraded to JUnit 4.8.1, Ant 1.8.0, PicoContainer 2.10.2, Mockito 1.8.2, Groovy 1.7.1 and Clojure 1.1.0 (Aslak Hellesøy)

=== Bugfixes
* Ensure that test classes come first on the classpath when using Maven. (Christof Koenig)
* Support Tables and PyStrings in Scala (#61 Jon-Anders Teigen)

== 0.2.3 2010-01-18

=== New Features
* Added EJB3 example using OpenEJB (Jonas Bandi)